# news-api

./: README.md  pyproject.toml
src/news_api/: __init__.py  news_api.py
src/newsapi/: __init__.py  newsapi.py  server.py
